fixed map footer overflow on select areas page ( closes #124 )

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -302,6 +302,7 @@ p {
 #areas_map {
     float: right;
     width: 450px;
+    overflow: hidden;
 }
 
 #countries {
